--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@
 .about-home{
     background-color:#3BA590;
     display:block;
-    height: 600px;
+    height: calc(100vh - 35px);
     display:flex;
     align-items: center;
     justify-content: center;
@@ -39,6 +39,7 @@
 .short-about{
     text-align: justify;
     width: 600px;
+    padding: 25px 10px;
     
 
 }
@@ -47,6 +48,39 @@
     color:white;
 }
 
+#work {
+    display:block;
+    height: 100vh;
+    display:flex;
+    flex-direction: column;
+
+}
+
+.work-header-div {
+    align-items: center;
+    justify-content: center;
+    display:flex;
+    flex-direction:row;
+    margin: 3em;
+    
+    
+
+
+}
+
+.projects-div {
+    display: flex;
+    
+}
+
+#header{
+    font-size: 40px;
+    font-weight: 600;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #3BA590;
+    border-bottom: 4px solid #3BA590;
+
+}
 /* Removes bullet point appearance for navigation bar */
 li {
     list-style-type: none;
@@ -84,7 +118,7 @@ li {
     color:#3BA590;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 150;
     /* text-decoration: none; */
     
 }
@@ -102,6 +136,10 @@ a, a:link, a:hover, a:visited, a:active {
     font-weight:bold;
 
 }
+
+html {
+    scroll-behavior: smooth;
+  }
 
   /* Responsive for tablet */
   @media all and (max-width: 990px) {
@@ -128,7 +166,7 @@ a, a:link, a:hover, a:visited, a:active {
     }
 
     .about-home{
-        height: 430px;
+        height: calc(100vh - 35px);
     }
 
 }
@@ -163,7 +201,7 @@ a, a:link, a:hover, a:visited, a:active {
     }
 
     .about-home{
-        height: 400px;
+        height: calc(100vh - 35px);
     }
 
     .short-about{
