--- a/index.css
+++ b/index.css
@@ -153,6 +153,27 @@
     justify-content: center;
     align-items: center;
 }
+
+#myBtn {
+    display: none;
+    position: fixed;
+    top: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #31C0DF;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    border: 0.5px solid white;
+  }
+  
+  #myBtn:hover {
+    background-color: #017E99;
+  }
 /* Removes bullet point appearance for navigation bar */
 li {
     list-style-type: none;
