Boston Airport Cab Done

--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@
 
 .title {
     margin: 2em;
+    
     text-align: center;
 
 }
@@ -24,6 +25,28 @@
 .webpage {
     width: 55em;
     margin: 1.5em 0;
+}
+
+.tablet {
+    width: 28em;
+    margin: 1.5em 1em;
+}
+
+.phone {
+    width: 17em;
+    margin: 1.5em 1em;
+}
+
+.section {
+    margin: 1em 18em;
+    text-align: flex-start;
+
+}
+
+.figure-div {
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .about-home{
@@ -90,10 +113,39 @@
 
 }
 
+.overview{
+    background-color:#E1F4F0;
+    display:block;
+    height: auto;
+    display:flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
+
+
+p, li{
+    font-size: 18px
+}
+
+.conclusion {
+    background-color: #E1F4F0;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    /* padding: 20px; */
+    padding: 1em 18em;
+    
+}
+
+
 .card {
     margin: 2em;
     width: 350px;
-    height: 250px;
+    height: 275px;
+    background-color: #f9f9f9
     
     /* max-height: 400px; */
     /* height: 350px; */
@@ -143,6 +195,21 @@
     flex-direction: column;
 }
 
+.short-desc {
+    display: flex;
+    flex-direction: row;
+}
+
+.overview-item {
+    margin: 0px 30px;
+    display: flex;
+    
+    align-items: flex-start;
+    flex-direction: column;
+    
+
+}
+
 #social-media {
     /* justify-content: */
     align-items: center;
@@ -154,7 +221,7 @@
 }
 
 #project-img {
-    height: 200px;
+    height: 300px;
     width: 350px;
     overflow: hidden;
 }
@@ -188,8 +255,12 @@
     background-color: #017E99;
   }
 /* Removes bullet point appearance for navigation bar */
-li {
+#ul {
     list-style-type: none;
+}
+
+#overview-text {
+    color: white;
 }
 
 
